# vite-vue-tauri-template

./: LICENSE  bun.lockb  eslint.config.js  index.html  package.json  vite.config.ts
.github/workflows/: release.yml
src/: auto-imports.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/pages/: index.vue
src/stores/: app.ts
