[package]
name = "vite-vue-tauri-template"
version = "0.0.0"
description = "A Tauri App"
authors = ["m1m1sha"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.6", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.6", features = [] }
tauri-plugin-shell = "2.0.0-rc.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
